# dl-augmented-igpc

./: .gitignore  .gitmodules  CMakeLists.txt  CNN  README.md  UEqn0.H  UEqn1.H  cnn_config.H  compile_commands.json  createFields.H  pEqn0.H  pEqn1.H  pisoFoamPC.C  pisoFoamPC_CNN.C
Make/: files  options
test/: .bash_history
test/0/: U0  U1  epsilon  k  nut0  nut1  p0  p1
test/0/uniform/: time
test/constant/: cnn_config  transportProperties  turbulenceProperties
test/constant/boundaryData/inlet/: points
test/constant/boundaryData/inlet/0/: U  epsilon  k  omega
test/models_and_normalizers/normalizers/: inp_normalizer_3323_step_init_and_last-interpolation_step_5s_custom_loss_noise_no_regularization.json  out_normalizer_3323_step_init_and_last-interpolation_step_5s_custom_loss_noise_no_regularization.json
test/system/: blockMeshDict  controlDict  fvSchemes  fvSolution  residuals  sets
utility/: CourantNo0.H  continuityErrs0.H  continuityErrs1.H
